[package]
name = "rust-blogpost-auth-async"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-service = "2.0.0"
actix-web = "3.3.2"
derive_more = "0.99.16"
dotenv = "0.15.0"
futures = "0.3.15"
r2d2 = "0.8.9"
reqwest = "0.11.4"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
